--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,22 @@ Default: 1
 
 - Primary: #e67e22
 
-- Tints(darker):
+- Tints(lighter):
 
-- Shades(lighter):
+#fae5d3
+#f8d8bd
+#f3bf91
+#f0b27a
+
+- Shades(darker):
+
 
 - Accents:
 
-- Grey: #555
+- Grey: 
+#555
+#333
+
 
 --- 03 SHADOWS
 
@@ -50,8 +59,124 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
+}
+
+.section-hero {
+  background-color: #fae5d3;
+  padding: 9.6rem 0;
+}
+
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+}
+
+/* 365-days-per-year */
+.hero-description span {
+  color: #e67e22;
+  font-weight: 600;
+}
+
+.btn:link,
+.btn:visited {
+  display: inline-block;
+
+  font-size: 2rem;
+  padding: 1.6rem 3.2rem;
+  font-weight: 600;
+  text-decoration: none;
+  border-radius: 9px;
+  color: #fff;
+
+  /* Adding animation when changing color */
+  transition: all 0.3s;
+}
+
+.btn--full:link,
+.btn--full:visited {
+  background-color: #e67e22;
+}
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+  color: #555;
+}
+
+.btn--full:hover,
+.btn--full:active {
+  background-color: #cf711f;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: #f8d8bd;
+  color: #555;
+
+  /* Trick to add border inside */
+  box-shadow: 0 0 0 3px #fff;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1.05;
+  font-weight: 700;
+  color: #333;
+  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
+}
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+}
+
+.hero-img {
+  width: 100%;
+}
+
+/* when we use helper class, we want to be sure this style to be add
+so we use !important keyword   */
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+.delivered-meals {
+  display: flex;
+  align-items: center;
+  margin-top: 8rem;
+  gap: 1.6rem;
+}
+
+.delivered-imgs {
+  display: flex;
+}
+
+.delivered-imgs img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid #fae5d3;
+}
+.delivered-imgs img:last-child {
+  margin: 0;
+}
+
+.delevered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+/* 250,000+ */
+.delevered-text span {
+  color: #e67e22;
+  font-size: 2rem;
+  font-weight: 700;
 }
