--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,15 @@
  10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
   
 - Font Weights:
-Default: 400
+Default: 400,
+Medium: 500,
+Semi-bold:600,
+Bold: 700
 
 - Line Heights:
 Default: 1 
+Small: 1.05
+Paragraph default: 1.6
  
 
 --- 02 COLORS
@@ -32,11 +37,12 @@ Default: 1
 #555
 #333
 
-
 --- 03 SHADOWS
 
 
 --- 04 BORDER-RADIUS
+Default: 9px
+
 
 --- 05 SPACING SYSTEM (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
@@ -64,26 +70,20 @@ body {
   font-weight: 400;
   color: #555;
 }
+/* ============================= */
+/* GENERAL REUSABLE COMPONENTS */
+/* ============================= */
 
-.section-hero {
-  background-color: #fae5d3;
-  padding: 9.6rem 0;
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1.05;
+  font-weight: 700;
+  color: #333;
+  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
 }
 
-.hero {
-  max-width: 130rem;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 9.6rem;
-  align-items: center;
-}
-
-/* 365-days-per-year */
-.hero-description span {
-  color: #e67e22;
-  font-weight: 600;
-}
+/* buttons */
 
 .btn:link,
 .btn:visited {
@@ -117,21 +117,103 @@ body {
 
 .btn--outline:hover,
 .btn--outline:active {
-  background-color: #f8d8bd;
+  background-color: #fae5d3;
   color: #555;
 
   /* Trick to add border inside */
   box-shadow: 0 0 0 3px #fff;
 }
 
-.heading-primary {
-  font-size: 5.2rem;
-  line-height: 1.05;
-  font-weight: 700;
-  color: #333;
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
+/* when we use helper class, we want to be sure this style to be add
+so we use !important keyword   */
+.margin-right-sm {
+  margin-right: 1.6rem !important;
 }
+
+/* ============================= */
+/* HEADER SECTION */
+/* ============================= */
+
+.header {
+  background-color: #fae5d3;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  /*  We want to be sticky later  */
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+.logo {
+  height: 2.2rem;
+}
+
+/* ============================= */
+/* NAVIGATION SECTION */
+/* ============================= */
+
+.main-nav-list {
+  font-size: 3.2rem;
+  list-style: none;
+  align-items: center;
+
+  display: flex;
+  gap: 3.2rem;
+}
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  background-color: #e67e22;
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
+  color: #fff;
+}
+
+/* ============================= */
+/* HERO SECTION */
+/* ============================= */
+.section-hero {
+  background-color: #fae5d3;
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+  padding: 0 2rem;
+}
+
+/* 365-days-per-year */
+.hero-description span {
+  color: #e67e22;
+  font-weight: 600;
+}
+
 .hero-description {
   font-size: 2rem;
   line-height: 1.6;
@@ -140,12 +222,6 @@ body {
 
 .hero-img {
   width: 100%;
-}
-
-/* when we use helper class, we want to be sure this style to be add
-so we use !important keyword   */
-.margin-right-sm {
-  margin-right: 1.6rem !important;
 }
 
 .delivered-meals {
