--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,29 @@ body {
 /* GENERAL REUSABLE COMPONENTS */
 /* ============================= */
 
+/*  Reuseable container to center content */
+.container {
+  /* 1140px = 114rem*/
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+
+/* Create a reusable grid */
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+
+/*  Create dififerent variation that want to make columns */
+.grid--2--col {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3--col {
+  grid-template-columns: repeat(3, 1fr);
+}
+
 .heading-primary {
   font-size: 5.2rem;
   line-height: 1.05;
@@ -205,7 +228,7 @@ so we use !important keyword   */
   grid-template-columns: 1fr 1fr;
   gap: 9.6rem;
   align-items: center;
-  padding: 0 2rem;
+  padding: 0 3.2rem;
 }
 
 /* 365-days-per-year */
@@ -255,4 +278,13 @@ so we use !important keyword   */
   color: #e67e22;
   font-size: 2rem;
   font-weight: 700;
+}
+
+/* ============================= */
+/* HERO SECTION */
+/* ============================= */
+
+.section-how {
+  padding: 9.6rem 0;
+  background-color: orangered;
 }
