--- a/css/style.css
+++ b/css/style.css
@@ -1,158 +1,3 @@
-/* 
---- 01 TYPOGRAFHY SYSTEM
-
-
-- FONT SIZES (px)
- 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-  
-- Font Weights:
-Default: 400,
-Medium: 500,
-Semi-bold:600,
-Bold: 700
-
-- Line Heights:
-Default: 1 
-Small: 1.05
-Paragraph default: 1.6
- 
-
---- 02 COLORS
-
-- Primary: #e67e22
-
-- Tints(lighter):
-
-#fae5d3
-#f8d8bd
-#f3bf91
-#f0b27a
-
-- Shades(darker):
-
-
-- Accents:
-
-- Grey: 
-#555
-#333
-
---- 03 SHADOWS
-
-
---- 04 BORDER-RADIUS
-Default: 9px
-
-
---- 05 SPACING SYSTEM (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
- 
- */
-
-html {
-  /*  The 1 rem == 10px */
-  /* 16px is default font size of user browser setting  */
-  /* 10px / 16px = 0.625 = 62.5% */
-
-  /* Percentage of user's browser font-size setting */
-  font-size: 62.5%;
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Rubik", sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
-}
-/* ============================= */
-/* GENERAL REUSABLE COMPONENTS */
-/* ============================= */
-
-/*  Reuseable container to center content */
-.container {
-  /* 1140px = 114rem*/
-  max-width: 120rem;
-  margin: 0 auto;
-  padding: 0 3.2rem;
-}
-
-/* Create a reusable grid */
-.grid {
-  display: grid;
-  gap: 9.6rem;
-}
-
-/*  Create dififerent variation that want to make columns */
-.grid--2--col {
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--3--col {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.heading-primary {
-  font-size: 5.2rem;
-  line-height: 1.05;
-  font-weight: 700;
-  color: #333;
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
-}
-
-/* buttons */
-
-.btn:link,
-.btn:visited {
-  display: inline-block;
-
-  font-size: 2rem;
-  padding: 1.6rem 3.2rem;
-  font-weight: 600;
-  text-decoration: none;
-  border-radius: 9px;
-  color: #fff;
-
-  /* Adding animation when changing color */
-  transition: all 0.3s;
-}
-
-.btn--full:link,
-.btn--full:visited {
-  background-color: #e67e22;
-}
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-
-.btn--full:hover,
-.btn--full:active {
-  background-color: #cf711f;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fae5d3;
-  color: #555;
-
-  /* Trick to add border inside */
-  box-shadow: 0 0 0 3px #fff;
-}
-
-/* when we use helper class, we want to be sure this style to be add
-so we use !important keyword   */
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
-
 /* ============================= */
 /* HEADER SECTION */
 /* ============================= */
@@ -286,5 +131,60 @@ so we use !important keyword   */
 
 .section-how {
   padding: 9.6rem 0;
-  background-color: orangered;
+}
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.step-img-box {
+  position: relative;
+  /* Center image in the box */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+  border-radius: 50%;
+
+  /* This is used to position Mobil image on top of circel */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.step-img-box::before {
+  width: 60%;
+  /* It doesn't work, so we need to use padding  */
+  /* height: 60%; */
+  /* 60% of parent's width */
+  padding-bottom: 60%;
+  background-color: #fae5d3;
+  /* In normal situation here the  circel is 
+  over the image to put it behind image we use z-index */
+  z-index: -2;
+}
+
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: #f8d8bd;
+  z-index: -1;
+}
+
+.step-img {
+  width: 35%;
 }
