--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,37 @@
 }
 
 /* ============================= */
-/* HERO SECTION */
+/* FEATURED-IN SECTION */
+/* ============================= */
+.section-featured {
+  padding: 4.8rem 0 1rem 0;
+}
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.4rem;
+  color: #888;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around;
+  /* Make logos grey color with low brightness */
+  filter: grayscale(100%);
+  filter: brightness(0);
+  opacity: 50%;
+}
+
+.featured-img {
+  /* width: 10%; */
+  height: 3.2rem;
+}
+
+/* ============================= */
+/* HOW IT WORKS SECTION */
 /* ============================= */
 
 .section-how {
