--- a/css/general.css
+++ b/css/general.css
@@ -93,6 +93,20 @@ body {
   display: grid;
   column-gap: 6.4rem;
   row-gap: 9.6rem;
+
+  /* margin-bottom: 9.6rem; */
+}
+
+/* .grid:last-child {
+  margin-bottom: 0;
+} */
+/* 
+This sudoCalss
+here will add bottom margin if it is not 
+  the last child in parent container
+    */
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
 }
 
 .grid--center-v {
@@ -204,6 +218,27 @@ body {
 .link:active {
   color: #cf711f;
   border-bottom: 1px solid transparent;
+}
+
+.list {
+  list-style: none;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1.6;
+}
+.list-item {
+  font-size: 1.8rem;
+
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #cf711f;
 }
 
 /* HELPER/SETTING CLASSES */
