--- a/css/general.css
+++ b/css/general.css
@@ -34,12 +34,22 @@ Paragraph default: 1.6
 #f3bf91
 #f0b27a
 
+#f59f00
+#e67e22
+#cf711f
+
+
+
+
 - Shades(darker):
 
 
 - Accents:
 
-- Grey: 
+- Grey:
+#ddd
+#888
+#777 
 #555
 #333
 
