--- a/css/style.css
+++ b/css/style.css
@@ -478,3 +478,38 @@
   font-size: 1.8rem;
   line-height: 1.8;
 }
+
+/* ============================= */
+/* CALL TO ACTION SECTION */
+/* ============================= */
+
+.section-cta {
+  padding: 9.6rem 0;
+}
+
+.cta {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /* background-color: #e67e22; */
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  border-radius: 12px;
+  background-image: linear-gradient(to right bottom, #f59f00, #e67e22);
+  overflow: hidden;
+
+  /* temp */
+  height: 50rem;
+}
+
+.cta-text-box {
+}
+
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(245, 159, 0, 0.3),
+      rgba(230, 126, 34, 0.3)
+    ),
+    url(../img/eating.jpg);
+  background-size: cover;
+  background-position: center;
+}
