--- a/css/general.css
+++ b/css/general.css
@@ -37,7 +37,7 @@ Paragraph default: 1.6
 #f59f00
 #e67e22
 #cf711f
-
+#45260a
 
 
 
@@ -174,16 +174,33 @@ here will add bottom margin if it is not
 
 /* buttons */
 
+.btn--form {
+  background-color: #45260a;
+  color: #fae5d3;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
+}
+
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
-
   font-size: 2rem;
   padding: 1.6rem 3.2rem;
   font-weight: 600;
   text-decoration: none;
   border-radius: 9px;
   color: #fff;
+
+  /* Only necessary for .btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 
   /* Adding animation when changing color */
   transition: all 0.3s;
@@ -249,6 +266,11 @@ here will add bottom margin if it is not
   width: 3rem;
   height: 3rem;
   color: #cf711f;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.4rem #333;
 }
 
 /* HELPER/SETTING CLASSES */
