--- a/css/general.css
+++ b/css/general.css
@@ -136,6 +136,10 @@ here will add bottom margin if it is not
   grid-template-columns: repeat(4, 1fr);
 }
 
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
+
 .heading-primary,
 .heading-secondary,
 .heading-tertiary {
