--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
   /*  We want to be sticky later  */
   height: 9.6rem;
   padding: 0 4.8rem;
+
+  position: relative;
 }
 .logo {
   height: 2.2rem;
@@ -21,13 +23,14 @@
 /* ============================= */
 
 .main-nav-list {
-  font-size: 3.2rem;
+  /* font-size: 3.2rem; */
   list-style: none;
   align-items: center;
 
   display: flex;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
+
 .main-nav-link:link,
 .main-nav-link:visited {
   display: inline-block;
@@ -56,6 +59,32 @@
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
   color: #fff;
+}
+
+/* MOBILE */
+
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+/* 
+<ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+<ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+
+*/
+
+/* Hide the close button */
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
 
 /* ============================= */
@@ -457,8 +486,6 @@
   text-align: center;
 }
 
-.feature {
-}
 .feature-icon {
   color: #e67e22;
   height: 3.2rem;
@@ -490,6 +517,7 @@
 
 .cta {
   display: grid;
+  /* 2/3 = 66.6%  1/3 = 33.3% */
   grid-template-columns: 2fr 1fr;
   /* background-color: #e67e22; */
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
@@ -555,9 +583,6 @@
 
 .cta-form input::placeholder {
   color: #aaa;
-}
-
-.cta-form select {
 }
 
 .cta *:focus {
